<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Ewanfen</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="setting_shopsit">点餐屏编号</string>
    <string name="setting_cloudurl">云端访问地址</string>
    <string name="setting_localhost">本地服务器访问地址</string>
    <string name="setting_advurl">广告视频地址</string>
    <string name="setting_menubackimg">点餐背景图片地址</string>
    <string name="setting_macadr">本机mac地址</string>
    <string name="setting_qrrequest">二维码请求地址</string>
    <string name="setting_save">保存并退出</string>
    <string name="setting_httphint">http://</string>
    <string name="setting_shopsithint">例如:ABC_10</string>
    

</resources>
